Changed last <p></p> with "GitHub link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,10 @@
       </div>
       <footer>
         <p>
-          Coded by Abbey Noreen for <a href="https://shecodes.io"> SheCodes </a>
+          <a href="https://github.com/AbbeyNoreen/SheCodes_WeatherApp">
+            Open-source code
+          </a>
+          by Abbey Noreen
         </p>
       </footer>
     </div>
