Changed verbage on weather

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <h4 class="weekDay"><strong>Sunday</strong></h4>
               <div class="upcomingIcon">
                 <i class="fas fa-cloud-showers-heavy"></i>
-                <h4 class="tempCondition">61°F <br />Rain</h4>
+                <h4 class="tempCondition">61°F <br />Rainy</h4>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <h4 class="weekDay"><strong>Tuesday</strong></h4>
               <div class="upcomingIcon">
                 <i class="fas fa-poo-storm"></i>
-                <h4 class="tempCondition">78°F <br />Storm</h4>
+                <h4 class="tempCondition">78°F <br />Stormy</h4>
               </div>
             </div>
           </div>
